mType/tests/testFiles/typeChecking/error/functionParameterTypeMismatchStringForInt.mt
function calculate(int a, int b): int {
    return a + b;
}

calculate("hello", 5);  // Should fail: string passed where int expected